<resources>
    <string name="app_name">Reto1Aplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="home">Home</string>
    <string name="galer_a">Galería</string>
    <string name="c_mara">Cámara</string>
    <string name="todo">TODO</string>
    <string name="t_tulo">Título</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="spinner_cities">Seleccionar Ciudad</string>
    <string name="publicar">publicar</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="nombre_del_perfil">Nombre del perfil</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
</resources>